--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <ul>
         <li><a href=".">Home</a></li>
         <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rules</a></li>
+        <li><a href="aboutgame-en.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href="http://goo.gl/forms/pUwQG78Xlq">Entry</a></li>
+        <li><a href=".">Entry</a></li>
         <li><a href="preliminary.html">Prelminary</a></li>
         <li><a href="final.html">Final</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -32,42 +32,26 @@
 
     <section id="main">
       <header>
-    	<h2>IPSJ International AI Programming Contest: SamurAI Coding 2014-15</h2>
+    	<h2>IPSJ International AI Programming Contest: SamurAI Coding 2015-16</h2>
       </header>
       <p>As the Internet industry rapidly grows, there is an intensifying need for high quality engineers and programmers.
-	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012 and 2013,
+	Information Processing Society of Japan (IPSJ) conducted the International AI programming Contest "SamurAI Coding" in 2012, 2013 and 2014,
 aiming to cultivate the younger generation so they can become leading researchers,
 	developers and successful on global level
-	(<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and
-	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>).
-      <p>3rd SamurAI Coding will be held between September 2014 and March 2015.
+	(<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">1st SamurAI Coding Final Photos in 2012</a>, <a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a> and <a href="http://www.ipsj.or.jp/event/samuraicoding/2014-15/">Results in 2014-15</a>).
+      <p>4th SamurAI Coding will be held between October 2015 and March 2016.
 	Contestants will compete their engineering skills for AI game programming.
-	Winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>.
-	Participating engineers will be able to demonstrate their skills on a global level through this contest.</p>
+	Winners of the preliminary round will move on to the final round, which will be held on March 11 2016 collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>.
+	Participating engineers and programmers will be able to demonstrate their skills on a global level through this contest.</p>
     </section>
     <section id="sponsors">
     <h2>Sponsors</h2>
-        <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
-        <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
-        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150" style="margin: 0px 10px;"/></a>
-        <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
+    (Call for Sponsors)
     </section>
     <section id="news">
       <h2>News</h2>
       <ul>
-      <li>Apr 28: <a href="final.html">The replays of the finals and the AI programs of the finalists</a> have been published.
-      <li>Apr 11: The world final round was successfully over! See the result at the <a href="http://samuraicoding.info/final.html">Final page</a>. See you next time!
-        <li>Mar 18: If you do not come to the contest site, you can still enjoy the contest by watching <a href="http://ch.nicovideo.jp/ipsj/">NicoNicoVideo Broadcasting</a>. Watch the world final together!</li>
-        <li>Feb 12: <a href="final.html">Timetable of the world final</a> collocated with 77th IPSJ National Convention at Kyoto University has been announced. Come to Kyoto, and watch exiting game together!
-	<li>Feb  9: <a href="schedule.html">Submission deadline for the world final</a> has been announced. Please read <a href="final.html">"Final"</a> and submit your program.
-        <li>Jan 14: <a href="preliminary.html">The result of preliminary round</a> has been released.
-      	<li>Dec 29: There was a problem with submission on the online execution server on Dec 28. Now the problem has been fixed. 
-        <li>Dec 26: Teams advanced to the World final round can revise their AI program for the World final round after the preliminary round. 
-        <li>Dec 13: Information about the <a href="preliminary.html">preliminary round</a> and the <a href="final.html">final round</a> has been added.
-        <li>Dec 12: Submission deadline has been extended to Jan 11. Prize information has been added.
-      	<li>Nov 24: Bugs in <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">sample AI programs</a> have been resolved.
-        <li>Nov 14: <a href="http://arena.ai-comp.net/">The online execution server</a> has been opened. Please　check <a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">the game rule</a> .
-        <li>May 1: This preliminary website has been launched.
+          <li>Sep 8: This preliminary website has been launched.
       </ul>
     </section>
 
