--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="news">
       <h2>News</h2>
       <ul>
+      	  <li>Sep 8: <a href="aboutgame-en.html">Preliminary game rule</a> is out!
           <li>Sep 8: This preliminary website has been launched.
       </ul>
     </section>
@@ -59,11 +60,7 @@ aiming to cultivate the younger generation so they can become leading researcher
       <h2>Registration and Submission</h2>
 
 <p>There is no age limit. Moreover contestants can participate in the contest as individual or team; there is no maximum number of team members.</p>
-      <p>Firstly, make your team account on <a href="http://arena.ai-comp.net/users/sign_up">Online Execution Server</a>.
-After that, register your team information with <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">Entry</a>.
-Then submit an archive file of your AI programs to <a href="http://arena.ai-comp.net/">Online Execution Server</a> in one of the following formats: zip, tar, tar.bz2, tar.gz. Please see <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> on the server for details.
-<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rule</a> and
-<a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">Sample AI program</a> are available. </p>
+<p>Further registration and submission procedures will be announced later. </p>
 
    <section id="prize">
       <h2>Prize</h2>
@@ -72,43 +69,27 @@ Then submit an archive file of your AI programs to <a href="http://arena.ai-comp
       <b>For Preliminary round contestants (including World Finalists): </b>
       </p>
 
-<p>Preliminary round contestants are invited to Banquet on the World final round date on a first-come, first-served basis; the number of Banquet participants is limited. </p>
-
-<p>Students will have a chance to attend events organized by Recruit Holdings for students on a priority basis (TBD). </p>
-
-<p>Students can freely attend sessions of the 77th IPSJ Annual Convention by register themselves at the <a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">Convention site</a>.</p>
+<p>(TBD)</p>
 
 <p><b>For World Finalists: </b></p>
 
-<p>Winners of World Final will receive prizes totaling 100,000JPY. Moreover there will be some Sponsor Awards and Gifts (TBD).</p>
+<p>(TBD)</p>
 
-      <p>World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)</p>
-
-      <p>Travel expenses of World final contestants will be partially supported.
-World Final will be held in the beautiful ancient city of Kyoto, Japan.
-Kyoto is named the <a href="http://kyoto.travel/">World's Best City in the Travel + Leisure</a>.
-Last year World final contestants from out side of Japan received
-travel expenses up to 100,000JPY, and contestants from a long distance
-within Japan received full travel expenses.
-</p>
-      <p>All World Final contestants will be presented on the contest site. </p>
     </section>
 
     <section id="importantdates">
-      <h2>Important Dates</h2>
+      <h2>Important Dates (TBD)</h2>
       <ul>
-      	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
-      	<li><font color="red">Preliminary round submission due: January 11th, 2015 AoE (extended)</font></li>
-      	<li>Preliminary round result announcement: January 14th, 2015</li>
-      	<li>Submission due for World final round: early in March, 2015 (TBD)(Teams advanced to World final can revise their program by this date.)</li>
-        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>): March 18, 2015</li>
+      	<li>Rule and platform announcement: October, 2015</li>
+      	<li>Preliminary round: November 2015 - Februrary 2016</li>
+        <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
       </ul>
     </section>
 
 <section id="game">
       <h2>Game and AI</h2>
-<p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills by creating AI program for a match-up game. Players act as "daimyo" (powerful feudal lords in pre-modern Japan) to compete with one another by drawing neutral liege lords to their side.</p>
-<p>Contestants can choose a certain programming language among 27 languages supported including C, C++, C#, Java, Objective-C, PHP, Python, Ruby, Clojure, D, Erlang, Gauche, Go, Haskell, JavaScript, OCaml and Prolog.</p>
+<p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills. See details at <a href="aboutgame-en.html">Game Rules</a>.</p>
+<p>Contestants can choose a certain programming language among various major languages including C++ and Java. (TBD)</p>
 </section>
     <section class="centered">
       <img src="images/ss1.png" width="300" title="Screenshot"/>
