--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="committee">
       <h2>Committee</h2>
 
- <p>Hironori Washizaki (Director), Ikuo Takeuchi (Executive Advisor),
- Takashi Chikayama, Shingo Takada, Matsuki Yoshino,  Hitoshi Matsubara, Kazunori Sakamoto,
- Tetsuro Tanaka, Kiyoshi Honda, Tasuku Hiraishi, Seiji Sato, Keiichi Yasumoto, Jun Nitta
+ <p>Hironori Washizaki (Director), Tasuku Hiraishi (Vice-Director), Takashi Chikayama (Executive Advisor), 
+ Ikuo Takeuchi, Shingo Takada, Matsuki Yoshino, Kazunori Sakamoto,
+ Tetsuro Tanaka, Jun Nitta, Michiko Oba, Noriko Fukazawa
  </p>
     </section>
 
@@ -127,38 +127,17 @@ aiming to cultivate the younger generation so they can become leading researcher
       	<td width="300">
       	  <section id="sponsors">
             <h3>Event Sponsor</h3>
-            <p>Recruit Holdings Co.,Ltd.</p>
-            <p><a href="http://www.recruit-rgf.com/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
-            <p>Indeed,Inc.</p>
-            <p><a href="http://www.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
-      	    <h3>Gold Sponsors</h3>
-            <p>e-Seikatsu Co., Ltd.</p>
-            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <p>Hitachi, Ltd.</p>
-            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+            <p>(TBD)</p>
+            <h3>Gold Sponsors</h3>
+            <p>(TBD)</p>
       	  </section>
       	</td>
       	<td>
       	  <section id="supporters">
       	    <h3>Supporters</h3>
             <p class="smaller">
-              Japan Information Technology Service Industry Association<br>
-              Japan Electronics and Information Technology Industries Association<br>
-              The Institute of Electronics, Information and Communication Engineers<br>
-              The Japanese Society for Artificial Intelligence<br>
-              Japan Society for Software Science and Technology<br>
-              Japan Users Association of Information Systems<br>
               IEEE-Computer Society<br>
-              IEEE-Computer Society Japan Chapter<br>
-              IEEE Japan Office<br>
-              Graduate School of Informatics, Kyoto University<br>
-              Academic Center for Computing and Media Studies, Kyoto University<br>
-              International Information Science Foundation<br>
-              The Korean Institute of Information Scientists and Engineers<br>
-              Information-technology Promotion Agency, Japan<br>
-              The Ministry of Economy, Trade and Industry<br>
-              The Ministry of Foreign Affairs of Japan<br>
-              The Ministry of Education, Culture, Sports, Science and Technology
+              (TBD)
              </p>
           </section>
       	</td>
