--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ aiming to cultivate the younger generation so they can become leading researcher
 <p>Contestants can choose a certain programming language among various major languages including C++ and Java. (TBD)</p>
 </section>
     <section class="centered">
-      <img src="images/ss1.png" width="300" title="Screenshot"/>
-      <img src="images/ss2.png" width="300" title="Screenshot"/>
+      <img src="banner.png"/>
+      <img src="snapshot.png"/>
     </section>
 
     <section id="committee">
@@ -118,7 +118,7 @@ aiming to cultivate the younger generation so they can become leading researcher
       	      Tokyo 101-0062 JAPAN<br>
       	    email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
 
-      		  samurai2014-contact@ipsj.or.jp</a><br>
+      		  samurai2015-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
             <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
