--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@ aiming to cultivate the younger generation so they can become leading researcher
 	Winners of the preliminary round will move on to the final round, which will be held on March 11 2016 collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>.
 	Participating engineers and programmers will be able to demonstrate their skills on a global level through this contest.</p>
     </section>
+    
+    <section class="centered">
+      <img src="banner.png" width=100% />
+    </section>
+    
     <section id="sponsors">
     <h2>Sponsors</h2>
     (Call for Sponsors)
@@ -92,8 +97,7 @@ aiming to cultivate the younger generation so they can become leading researcher
 <p>Contestants can choose a certain programming language among various major languages including C++ and Java. (TBD)</p>
 </section>
     <section class="centered">
-      <img src="banner.png"/>
-      <img src="snapshot.png"/>
+      <img src="banner.png" width=100% />
     </section>
 
     <section id="committee">
