--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ aiming to cultivate the younger generation so they can become leading researcher
 <p>Contestants can choose a certain programming language among various major languages including C++ and Java. (TBD)</p>
 </section>
     <section class="centered">
-      <img src="banner.png" width=100% />
+      <img src="snapshot.png" width=100% />
     </section>
 
     <section id="committee">
