--- a/faq.html
+++ b/faq.html
@@ -17,10 +17,10 @@
       <ul>
         <li><a href=".">Home</a></li>
         <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rules</a></li>
+        <li><a href="aboutgame-en.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href="http://goo.gl/forms/pUwQG78Xlq">Entry</a></li>
+        <li><a href=".">Entry</a></li>
         <li><a href="preliminary.html">Prelminary</a></li>
         <li><a href="final.html">Final</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -33,7 +33,7 @@
    <section id="importantdates">
       <h2>FAQ</h2>
       <p>Frequent Asked Questions and corresponding answers will be available here.</p>
-      <p>If you have any question, please contact us at <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">samurai2014-contact@ipsj.or.jp</a></p>
+      <p>If you have any question, please contact us at <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">samurai2015-contact@ipsj.or.jp</a></p>
     </section>
 
 <footer>
