--- a/software.html
+++ b/software.html
@@ -17,10 +17,10 @@
       <ul>
         <li><a href=".">Home</a></li>
         <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rules</a></li>
+        <li><a href="aboutgame-en.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
         <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href="http://goo.gl/forms/pUwQG78Xlq">Entry</a></li>
+        <li><a href=".">Entry</a></li>
         <li><a href="preliminary.html">Prelminary</a></li>
         <li><a href="final.html">Final</a></li>
         <li><a href="faq.html">FAQ</a></li>
