--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ aiming to cultivate the younger generation so they can become leading researcher
     <section id="importantdates">
       <h2>Important Dates (TBD)</h2>
       <ul>
-      	<li>Rule and platform announcement: October, 2015</li>
-      	<li>Preliminary round: November 2015 - Februrary 2016</li>
+      	<li>Rule and platform announcement: Oct 2015</li>
+      	<li>Preliminary round: Nov 2015 - Feb 2016</li>
         <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
       </ul>
     </section>
