--- a/schedule.html
+++ b/schedule.html
@@ -33,12 +33,10 @@
    <section id="importantdates">
       <h2>Important Dates</h2>
       <ul>
-      	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
-      	<li>Preliminary round submission due: January 11th, 2015 AoE (extended)</li>
-      	<li>Preliminary round result announcement: January 14th, 2015</li>
-        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>): March 18, 2015</li>
-      	<li><font color="red">World final round submission due: March 8th, 2015 AoE</font></li>
-      </ul>
+<li>Rule and platform announcement: Oct 2015</li>
+      	<li>Preliminary round: Nov 2015 - Feb 2016</li>
+        <li>World final round in Yokohama (collocated with 78th IPSJ National Convention at <a href="http://www.keio.ac.jp/en/maps/yagami.html">Keio University, Yagami Campus</a>): March 11, 2016</li>
+       </ul>
     </section>
 
 <footer>
