--- a/tutorial.html
+++ b/tutorial.html
@@ -32,72 +32,7 @@
 
    <section id="main">
       <h2>Tutorial</h2>
-      <p>
-        Here we show a tutorial for submitting your AI programs on <a href="http://arena.ai-comp.net/">the online execution server</a> step by step.
-      </p>
-      <hr>
-      <p>
-        <div>
-          First, open <a href="http://arena.ai-comp.net/">the online execution server</a> and sign up or log in.
-          <br /><br />
-        </div>
-        <div>
-          <img src="images/tutorial/top.png"/>
-        </div>
-      </p>
-      <hr>
-      <p>
-        <div>
-          Enter your e-mail and team name if you need to create an account.
-          <br /><br />
-        </div>
-        <div>
-          <img src="images/tutorial/signup.png"/>
-        </div>
-      </p>
-      <hr>
-      <p>
-        <div>
-          Open the contest list, find "SamurAI Coding 2014 Practice" and then click it.
-          <br /><br />
-        </div>
-        <div>
-          <img src="images/tutorial/contests.png"/>
-        </div>
-      </p>
-      <hr>
-      <p>
-        <div>
-          Submit your AI archive file (you can download sample AI files) via the form.
-          <br /><br />
-        </div>
-        <div>
-          <img src="images/tutorial/submission_form.png"/>
-        </div>
-      </p>
-      <hr>
-      <p>
-        <div>
-          After a while, you can see your submission status (sometimes you need to reload the page).
-          When your AI program is successfully compiled, click the "COMPILED" to show the detail.
-          <br /><br />
-        </div>
-        <div>
-          <img src="images/tutorial/submissions.png"/>
-        </div>
-      </p>
-      <hr>
-      <p>
-        <div>
-          Your AI program will be battled with others.
-          After that, you can see the replay where your AI joined.
-          Let's try it!
-          <br /><br />
-        </div>
-        <div>
-          <img src="images/tutorial/submission.png"/>
-        </div>
-      </p>
+      <p>(TBD)</p>
     </section>
 
 <footer>
