--- a/schedule.html
+++ b/schedule.html
@@ -43,58 +43,37 @@
   <div>
     <table class="multicolumn">
       <tr>
-        <td width="250">
-          <section id="contact">
-            <h3>Information Processing Society of Japan</a></h3>
-            <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
-              1-5 Kanda-Surugadai, Chiyoda-ku,
-              Tokyo 101-0062 JAPAN<br>
-            email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
+      	<td width="250">
+      	  <section id="contact">
+      	    <h3>Information Processing Society of Japan</a></h3>
+      	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
+      	      1-5 Kanda-Surugadai, Chiyoda-ku,
+      	      Tokyo 101-0062 JAPAN<br>
+      	    email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
 
-            samurai2014-contact@ipsj.or.jp</a><br>
+      		  samurai2015-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
-            <img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/>
-          </section>
-        </td>
-        <td width="300">
-          <section id="sponsors">
+            <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+      	  </section>
+      	</td>
+      	<td width="300">
+      	  <section id="sponsors">
             <h3>Event Sponsor</h3>
-            <p>Recruit Holdings Co.,Ltd.</p>
-            <p><a href="http://www.recruit-rgf.com/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
-            <p>Indeed,Inc.</p>
-            <p><a href="http://www.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
+            <p>(TBD)</p>
             <h3>Gold Sponsors</h3>
-            <p>e-Seikatsu Co., Ltd.</p>
-            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <p>Hitachi, Ltd.</p>
-            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
-          </section>
-        </td>
-        <td>
-          <section id="supporters">
-            <h3>Supporters</h3>
+            <p>(TBD)</p>
+      	  </section>
+      	</td>
+      	<td>
+      	  <section id="supporters">
+      	    <h3>Supporters</h3>
             <p class="smaller">
-              Japan Information Technology Service Industry Association<br>
-              Japan Electronics and Information Technology Industries Association<br>
-              The Institute of Electronics, Information and Communication Engineers<br>
-              The Japanese Society for Artificial Intelligence<br>
-              Japan Society for Software Science and Technology<br>
-              Japan Users Association of Information Systems<br>
               IEEE-Computer Society<br>
-              IEEE-Computer Society Japan Chapter<br>
-              IEEE Japan Office<br>
-              Graduate School of Informatics, Kyoto University<br>
-              Academic Center for Computing and Media Studies, Kyoto University<br>
-              International Information Science Foundation<br>
-              The Korean Institute of Information Scientists and Engineers<br>
-              Information-technology Promotion Agency, Japan<br>
-              The Ministry of Economy, Trade and Industry<br>
-              The Ministry of Foreign Affairs of Japan<br>
-              The Ministry of Education, Culture, Sports, Science and Technology
+              (TBD)
              </p>
           </section>
-        </td>
+      	</td>
       </tr>
     </table>
   </div>
