--- a/aboutgame-en.html
+++ b/aboutgame-en.html
@@ -51,4 +51,44 @@
     <img src="snapshot.png" width=100% title="Screen Snapshot">
   </section>
 
+<footer>
+  <div>
+    <table class="multicolumn">
+      <tr>
+      	<td width="250">
+      	  <section id="contact">
+      	    <h3>Information Processing Society of Japan</a></h3>
+      	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
+      	      1-5 Kanda-Surugadai, Chiyoda-ku,
+      	      Tokyo 101-0062 JAPAN<br>
+      	    email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
+
+      		  samurai2015-contact@ipsj.or.jp</a><br>
+            web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
+            </p>
+            <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
+      	  </section>
+      	</td>
+      	<td width="300">
+      	  <section id="sponsors">
+            <h3>Event Sponsor</h3>
+            <p>(TBD)</p>
+            <h3>Gold Sponsors</h3>
+            <p>(TBD)</p>
+      	  </section>
+      	</td>
+      	<td>
+      	  <section id="supporters">
+      	    <h3>Supporters</h3>
+            <p class="smaller">
+              IEEE-Computer Society<br>
+              (TBD)
+             </p>
+          </section>
+      	</td>
+      </tr>
+    </table>
+  </div>
+</footer>
+
 </body>
