--- a/aboutgame-en.html
+++ b/aboutgame-en.html
@@ -8,6 +8,25 @@
     <title>SamurAI 3x3: Game Outline</title>
     <link rel="stylesheet" href="http://samuraicoding.info/stylesheets/default.css">
   </head>
+  
+  <header id="mast">
+  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <nav id="global">
+      <ul>
+        <li><a href=".">Home</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="aboutgame-en.html">Rules</a></li>
+        <li><a href="software.html">Software</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
+        <li><a href=".">Entry</a></li>
+        <li><a href="preliminary.html">Prelminary</a></li>
+        <li><a href="final.html">Final</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="index-jp.html">Japanese</a></li>
+      </ul>
+  </nav>
+</header>
+  
   <section class=centered>
     <img src="./banner.png" title="Banner" width=100%>
   </section>
