--- a/index-jp.html
+++ b/index-jp.html
@@ -17,10 +17,10 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
+        <li><a href="aboutgame-jp">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
         <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
+        <li><a href=".">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
         <li><a href="faq-jp.html">FAQ</a></li>
@@ -34,37 +34,20 @@
     <section id="main">
       <h2>情報処理学会 国際AIプログラミングコンテスト: SamurAI Coding 2014-15</h2>
       <p>インターネット産業の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一	線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト
-	"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました（<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">2012年度決勝の様子</a>、
-	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>）。</p>
-      <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月	に京都で開催する決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>
-	に併設されます。参加エンジニアはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
+	"SamurAI Coding" を 2012 年度、2013 年度および 2014 年度に開催いたしました（<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">2012年度決勝の様子</a>、
+	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>、<a href="http://www.ipsj.or.jp/event/samuraicoding/2014-15/">2014年度の結果</a>）。</p>
+      <p>今年度も SamurAI Coding 2015-16 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2016年3月に横浜市で開催される決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/78/">情報処理学会 第78回全国大会</a>
+	に併設されます。参加エンジニア・プログラマはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
     <section id="sponsors">
     <h2>スポンサー</h2>
-        <a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="250"/></a> 
-        <a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a>
-        <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150" style="margin: 0px 10px;"/></a>
-        <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
+    (TBD)
     </section>
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-      <li>4月28日: <a href="final-jp.html">決勝戦のリプレイ、および決勝戦に進出した各チームからいただいたAIプログラム</a>を公開しました。
-      <li>4月11日: 決勝（The world final round）は無事終了しました! 結果は<a href="http://samuraicoding.info/final-jp.html">決勝ページ</a>を参照ください。また次の機会にお会いしましょう！
-        <li>3月18日: <strong>いよいよ本日 15:20からWorld Finalの対戦が始まります。ニコニコ生放送<a href="http://ch.nicovideo.jp/ipsj/">【第2イベント会場：情報処理学会チャンネル】</a>
-にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
-</strong>
-        <li>2月12日: 情報処理学会全国大会併設の<a href="final-jp.html">決勝 World Final</a>の進行を掲載しました。ぜひご一緒に、白熱の試合を観戦しましょう！
-	<li>2月9日: <a href="schedule-jp.html">決勝プログラムの提出締切</a>を公表しました。プログラム投稿方法は<a href="final-jp.html">決勝</a>をご参照ください。
-        <li>1月14日: <a href="preliminary-jp.html">予選結果</a>を公開しました。
-      	<li>12月29日: 28日中にオンライン対戦サーバにおいてプログラム投稿にあたり不具合がありましたが、現在は復旧しています。
-        <li>12月26日: オンライン予選後、決勝進出者は決勝に向けてプログラムを改訂できます。その旨を明記しました。
-        <li>12月13日: <a href="preliminary-jp.html">予選</a>および<a href="final-jp.html">決勝</a>の情報を公開しました。
-        <li>12月12日: 予選応募締め切りを2015年1月11日 AoE（日本時間 1月12日21:00）にまで延長しました。特典の情報を追加しました。
-        <li>11月24日: <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAIプログラム</a>を修正しました。
-        <li>11月14日: <a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a>を公開しました。<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ゲームルール</a>もご参照ください。
-        <li>8月4日: <a href="sponsor-jp.html">スポンサーの募集</a>を開始しました。
-        <li>5月1日: 本予告サイトを立ち上げました。
+      	<li>9月8日: <a href="aboutgame-jp.html">ゲームルール案</a>を公開しました。
+        <li>9月8日: 本予告サイトを立ち上げました。
       </ul>
     </section>
 
@@ -74,10 +57,8 @@
 年齢制限はありません。どなたでもご参加いただけます。
 個人、またはチーム（メンバー数上限なし）のいずれの形でもご参加いただけます。
 </p>
-      <p>最初に <a href="http://arena.ai-comp.net/users/sign_up">オンライン対戦サーバ</a>上でチームにつき一つのアカウントを作成してください。
-続いて、チームの情報を <a href="https://docs.google.com/forms/d/1P0FHCEi8_3Pp00AYj71WAt7EVzPk9VQEz1MDmqrfD4s/viewform?c=0&w=1">参加登録</a> してください。
-参加登録後は、<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a> ならびに <a href="https://github.com/AI-comp/SamurAICoding2014/tree/master/SampleAI">サンプルAI</a> を参照のうえ、<a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a> にログインし自身のAIプログラムのAIプログラムのアーカイブファイルをzip, tar, tar.bz2, tar.gzのいずれかの形式で投稿してください。 投稿方法の詳細についてはサーバ上の <a href="http://arena.ai-comp.net/help">How to Submit Your AI Program</a> を参照してください。
 
+<p>（詳細は後日掲載予定）
 </p>
     </section>
 
@@ -87,39 +68,23 @@
       <b>予選応募者（決勝出場者を含む）</b>
 
 <p>
-予選応募者は、成績によらず決勝当日夜の懇親会に出席できます（ただし先着順、人数制限あり）。予選応募者や決勝出場者、スポンサー企業の皆様等との交流の場として懇親会を設けます。
-</p>
-<p>
-予選応募者のうちで学生の方は、希望によりイベントスポンサー リクルートホールディングスにおける学生向けイベントに優先参加できる予定です。
-</p>
-
-<p>
-学生の方は、<a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">全国大会申込サイト</a>で別途申し込むことで第77回全国大会を無料聴講できます。
+	（詳細は後日掲載予定）
 </p>
 
 <b>決勝出場者</b>
 
 <p>
-決勝における上位表彰者には総額10万円相当の副賞が提供されます。さらに、スポンサーから企業賞や景品が提供される予定です。
+	（詳細は後日掲載予定）
 </p>
 
-
-    <p>決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、一年間の会員権を得ます。</br>
-      会員権には、情報処理学会デジタルライブラリへのアクセス権利も含まれます。</p>
-
-      <p>決勝出場者は、京都大学にて開催の決勝への旅費補助を受けられます。昨年は、海外チームは10万円を上限として、国内チームは遠方からの参加の場合に実費相当を支援しました。今年は変更の可能性があります。
-</p>
-      <p>決勝出場者は、コンテスト Web サイトに表彰されます。</p>
     </section>
 
     <section id="importantdates">
-      <h2>主要日程</h2>
+      <h2>主要日程（予定）</h2>
       <ul>
-        <li>ルール公開、応募受付開始：2014年11月14日</li>
-        <li><font color"red">オンライン予選応募締切　：2015年 1月11日 Anywhere On Earth（日本時間 1月12日 21:00）（延長しました）</font></li>
-        <li>オンライン予選結果発表　：2015年1月14日</li>
-        <li>決勝用プログラム提出締切：2015年3月上旬（予定、オンライン予選後、決勝進出者は決勝に向けてプログラムを改訂できます）</li>
-        <li>決勝（於 京都大学） 　　：2015年3月18日　※<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会第77回全国大会併催</a></li>
+        <li>ルール公開、応募受付開始：2015年10月</li>
+        <li>オンライン予選　：2015年11月-2016年2月</li>
+        <li>決勝（於 慶應義塾大学） 　　：2015年3月11日　※<a href="http://www.ipsj.or.jp/event/taikai/778">情報処理学会第77回全国大会併催</a></li>
       </ul>
     </section>
 
@@ -129,39 +94,29 @@
         本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
         参加者はプログラミングスキルに加えて、
         アルゴリズムやAIストラテジーの設計スキルで競い合います。
-        題材となるゲームでは、
-        プレイヤーが戦国大名になり、領主たちを交渉で味方に引き入れ、
-        他の大名たちと争います。
+        ゲーム内容「SamurAI 3×3（サムライ・スリー・オン・スリー）」は、
+        異なる武器を使う3人のサムライが軍団を組み、同じく3人のサムライからなる相手軍団と対戦して、獲得した領地の広さを競うゲームです。競技参加者はそれぞれひとりのサムライの動作を決めるAIプログラムを作成、味方のサムライと協力してゲームを進めます。
       </p>
       <p>
-        プログラミング言語としては、C、C++、C#、Java、Objective-C、PHP、Python、Ruby、Clojure、D、Erlang、
-        Gauche、Go、Haskell、JavaScript、OCaml、Prologを含む全27言語に対応しています。
+        プログラミング言語としては、C++、Javagを含む様々な主要な言語に対応する予定です。
       </p>
     </section>
 
     <section class="centered">
-      <img src="images/ss1.png" width="300" title="Screenshot"/>
-      <img src="images/ss2.png" width="300" title="Screenshot"/>
-    </section>
-
-    <section id="game">
-      <h2>過去のコンテストとの違い</h2>
-      <p>
-        SamurAI CodingではCEDEC、JavaChallenge、A.I. Challenge @ CODE FESTIVALで使用したゲームをベースにしたゲームを題材として扱っています。
-        ゲーム内容は一見類似していますが、AIプログラムに必要とされる戦略は大きく異なり、過去に使用したAIプログラムに勝ち目はないでしょう。
-        例えば、本コンテストでの大きな変更として、ゲームの途中で全情報が開示されることに加え、総兵力（得点）の計算も行われます。
-        開示情報と中間の総兵力を踏まえて、ゲーム後半に戦術を練り直すことが重要です。強力なアルゴリズムのアイデアをお待ちしております。
-        なお、実際に過去のコンテストの優勝者はそれぞれ異なっており、SamurAI Codingに初めて挑戦される方にも優勝のチャンスがあります。
-        SamurAI Codingに初めて挑戦する皆様、過去のコンテストに参加した皆様、最強のAIプログラムを投稿して、日本の古都、京都で会いましょう！
-      </p>
+      <img src="banner.png" width=100% />
     </section>
 
     <section id="committee">
       <h2>委員会体制</h2>
-<p>鷲崎弘宜（早稲田大学, 委員長）, 竹内郁雄（東京大学名誉教授, エグゼクティブアドバイザー), 近山隆（東京大学名誉教授）,
-高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 松原仁（はこだて未来大学）, 坂本一憲（国立情報学研究所）,
-田中哲朗（東京大学）, 本田澄（早稲田大学）, 平石拓（京都大学）, 佐藤靖治（早稲田大学）,
-安本慶一（奈良先端科学技術大学院大学）, 新田淳（日立製作所）
+<p>鷲崎弘宜（早稲田大学, 委員長）, 平石拓（京都大学, 副委員長）, 
+近山隆（東京大学名誉教授, エクゼクティブアドバイザー）,
+竹内郁雄（東京大学名誉教授), 
+高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 
+坂本一憲（国立情報学研究所）,
+田中哲朗（東京大学）, 
+新田淳（日立製作所）, 
+大場みち子（はこだて未来大学）, 
+深澤紀子（鉄道総合技術研究所）
 </p>
     </section>
 
@@ -174,51 +129,29 @@
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
-          samurai2014-contact@ipsj.or.jp</a></p>
+            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+          samurai2015-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
-            <h3>イベントスポンサー</h3>
-            <p>株式会社リクルートホールディングス</p>
-            <p><a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
-            <p>Indeed,Inc.</p>
-            <p><a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
-            <h3>ゴールドスポンサー</h3>
-            <p>株式会社いい生活</p>
-            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <p>株式会社日立製作所</p>
-            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+            <h3>イベントスポンサー</h3>(TBD)
+            <h3>ゴールドスポンサー</h3>(TBD)
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-              一般社団法人 情報サービス産業協会<br>
-              一般社団法人 電子情報技術産業協会<br>
-              一般社団法人 電子情報通信学会<br>
-              一般社団法人 人工知能学会<br>
-              一般社団法人 日本ソフトウェア科学会<br>
-              一般社団法人 日本情報システム・ユーザー協会<br>
               IEEE-Computer Society<br>
-              IEEE-Computer Society Japan Chapter<br>
-              IEEE Japan Office<br>
-              京都大学 情報学研究科<br>
-              京都大学 学術情報メディアセンター<br>
-              財団法人 情報科学国際交流財団<br>
-              The Korean Institute of Information Scientists and Engineers<br>
+              (TBD)
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
-              独立行政法人 情報処理推進機構<br>
-              経済産業省<br>
-              外務省<br>
-              文部科学省
+            	(TBD)
             </p>
           </section>
         </td>
