--- a/index-jp.html
+++ b/index-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2014">
+  <meta name="description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2014</title>
+  <title>SamurAI Coding 2015-16</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -39,6 +39,11 @@
       <p>今年度も SamurAI Coding 2015-16 を開催いたします。ゲームをテーマにしたプログラミングスキルを競い、予選を勝ち抜いたチームが2016年3月に横浜市で開催される決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/78/">情報処理学会 第78回全国大会</a>
 	に併設されます。参加エンジニア・プログラマはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
+    
+    <section class="centered">
+      <img src="banner.png" width=100% />
+    </section>
+    
     <section id="sponsors">
     <h2>スポンサー</h2>
     (TBD)
