--- a/index-jp.html
+++ b/index-jp.html
@@ -108,7 +108,7 @@
     </section>
 
     <section class="centered">
-      <img src="banner.png" width=100% />
+      <img src="snapshot.png" width=100% />
     </section>
 
     <section id="committee">
