--- a/aboutgame-jp.html
+++ b/aboutgame-jp.html
@@ -8,6 +8,26 @@
     <title>SamurAI 3x3: ゲームの概要</title>
     <link rel="stylesheet" href="http://samuraicoding.info/stylesheets/default.css">
   </head>
+  
+  <header id="mast">
+  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <nav id="global">
+      <ul>
+        <li><a href="index-jp.html">ホーム</a></li>
+        <li><a href="schedule-jp.html">日程</a></li>
+        <li><a href="aboutgame-jp">ルール</a></li>
+        <li><a href="software-jp.html">ソフトウェア</a></li>
+        <li><a href="tutorial-jp.html">チュートリアル</a></li>
+        <li><a href=".">参加登録</a></li>
+        <li><a href="preliminary-jp.html">予選</a></li>
+        <li><a href="final-jp.html">決勝</a></li>
+        <li><a href="faq-jp.html">FAQ</a></li>
+        <li><a href="sponsor-jp.html">スポンサー</a></li>
+        <li><a href="index.html">English</a></li>
+      </ul>
+  </nav>
+</header>
+
   <section class=centered>
     <img src="./banner.png" title="Banner" width=100%>
   </section>
@@ -51,4 +71,44 @@
     <img src="snapshot.png" width=100% title="Screen Snapshot">
   </section>
 
+<footer>
+  <div>
+    <table class="multicolumn">
+      <tr>
+        <td width="250">
+          <section id="contact">
+            <h3>情報処理学会</h3>
+            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
+            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+          samurai2015-contact@ipsj.or.jp</a></p>
+          <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
+          </section>
+        </td>
+        <td width="300">
+          <section id="sponsors">
+            <h3>イベントスポンサー</h3>(TBD)
+            <h3>ゴールドスポンサー</h3>(TBD)
+          </section>
+        </td>
+        <td>
+          <section id="supporters">
+            <h3>協賛</h3>
+            <p class="smaller">
+              IEEE-Computer Society<br>
+              (TBD)
+            </p>
+          </section>
+          <section id="backers">
+            <h3>後援</h3>
+            <p class="smaller">
+            	(TBD)
+            </p>
+          </section>
+        </td>
+      </tr>
+    </table>
+  </div>
+</footer>
+
 </body>
+
