--- a/final-jp.html
+++ b/final-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2014">
+  <meta name="description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2014</title>
+  <title>SamurAI Coding 2015-16</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -17,10 +17,10 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.ja.md">ルール</a></li>
+        <li><a href="aboutgame-jp">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
         <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://goo.gl/forms/pUwQG78Xlq">参加登録</a></li>
+        <li><a href=".">参加登録</a></li>
         <li><a href="preliminary-jp.html">予選</a></li>
         <li><a href="final-jp.html">決勝</a></li>
         <li><a href="faq-jp.html">FAQ</a></li>
@@ -33,356 +33,7 @@
 
     <section id="importantdates">
       <h2>決勝</h2>
-<h4>結果</h4>
-
-<p>
-多くの選手、スポンサー、参加者ならびにスタッフ・関係者により、 
-SamurAI Coding 2014-15 World Final Roundは無事終了しました。
-4回の対戦の結果、16チーム中次の4チームが最終の決勝に進出しました: Taiyo, wahu, siman, and muupan。
-さらに決勝戦の結果、チームTaiyoが優勝しました。
-また、賞金およびスポンサー賞は下記のチームに授与されました。
-おめでとうございます！ 
-さらに懇親会にてネットワーキングを実施しました。
-ありがとうございました、そして、また次の機会にお会いしましょう！
-</p>
-
-<ul>
-<li>賞金: Taiyo ( Taiyo Hara ) 40,000JPY, wahu 30,000JPY, siman 20,000JPY, muupan 10,000JPY
-<li>リクルートホールディングス, Indeed スポンサー賞 (Amazon gift cards & Indeed goods): Taiyo ( Taiyo Hara )
-, wahu, siman
-<li>いい生活 スポンサー賞(Ricoh Theta & Raspberry Pi 2 Model B): iwashi31, tosaka2 (Kazuhiro Saito)
-</ul>
-
-<table>
-	<thead>
-		<tr>
-			<th>
-				Place
-			</th>
-			<th>
-				Team　　　　　　　　　　　
-			</th>
-			<th>
-				Final Game 1
-			</th>
-			<th>
-				Final Game 2
-			</th>
-			<th>
-				Final Game 3
-			</th>
-			<th>
-				AIプログラム
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<th>
-				1
-			</th>
-			<td>
-				Taiyo ( Taiyo Hara )
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">18</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">18</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">18</a>
-			</td>
-			<td>
-				<a href="programs/Maou20150412.zip">こちら</a>
-			</td>
-		</tr>
-		<tr>
-			<th>
-				2
-			</th>
-			<td>
-				wahu
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">1</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">4</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">4</a>
-			</td>
-			<td>
-				<a href="programs/JavaScript_w2.zip">こちら</a>
-			</td>
-		</tr>
-		<tr>
-			<th>
-				3
-			</th>
-			<td>
-				siman
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">4</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">0</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">1</a>
-			</td>
-		</tr>
-		<tr>
-			<th>
-				4
-			</th>
-			<td>
-				muupan
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146207">1</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146208">2</a>
-			</td>
-			<td>
-				<a href="http://arena.ai-comp.net/contests/13/battle_results/146209">1</a>
-			</td>
-		</tr>
-		<tr>
-			<th>
-				5
-			</th>
-			<td colspan="4">
-				iwashi31
-			</td>
-		</tr>
-		<tr>
-			<th>
-				6
-			</th>
-			<td colspan="4">
-				kazunetakahashi
-			</td>
-		</tr>
-		<tr>
-			<th>
-				7
-			</th>
-			<td colspan="4">
-				haraduka
-			</td>
-		</tr>
-		<tr>
-			<th>
-				8
-			</th>
-			<td colspan="4">
-				y_kawano
-			</td>
-		</tr>
-		<tr>
-			<th>
-				9
-			</th>
-			<td colspan="4">
-				宇宙ツイッタラーX
-			</td>
-		</tr>
-		<tr>
-			<th>
-				10
-			</th>
-			<td colspan="4">
-				believeitmyway
-			</td>
-		</tr>
-		<tr>
-			<th>
-				11
-			</th>
-			<td colspan="4">
-				tosaka2 (Kazuhiro Saito)
-			</td>
-		</tr>
-		<tr>
-			<th>
-				12
-			</th>
-			<td colspan="4">
-				Megatron (Varun Vishwanathan)
-			</td>
-		</tr>
-		<tr>
-			<th>
-				13
-			</th>
-			<td colspan="4">
-				assy
-			</td>
-		</tr>
-		<tr>
-			<th>
-				14
-			</th>
-			<td colspan="4">
-				shin1m
-			</td>
-		</tr>
-		<tr>
-			<th>
-				15
-			</th>
-			<td colspan="4">
-				ArcticPanda (Katsuma Inoue)
-			</td>
-		</tr>
-		<tr>
-			<th>
-				16
-			</th>
-			<td colspan="4">
-				ksk
-			</td>
-		</tr>
-	</tbody>
-</table>
-
-<p>
-</p>
-
-<p>
-<a href="https://cloud.githubusercontent.com/assets/4087817/7099480/d3af99a2-e02e-11e4-88b3-48672627e60b.jpg">
-<img src="https://cloud.githubusercontent.com/assets/4087817/7099480/d3af99a2-e02e-11e4-88b3-48672627e60b.jpg" height="200">
-</a>
-<a href="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099488/e8be7386-e02e-11e4-8f5a-2b0deb107053.jpg
-" height="200"></a>
-<!--<a href="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099493/f3dff8a2-e02e-11e4-9f3e-6cdc99e99577.jpg
-" height="200"></a>-->
-<a href="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg"><img src="https://cloud.githubusercontent.com/assets/4087817/7099497/fecad78c-e02e-11e4-98f3-3b84fba84d23.jpg
-" height="200"></a>
-</p>
-
-<h4>「旗幟を鮮明にしない中立の領主たちを交渉で味方に引き入れて、勝利を手にしろ！」</h4>
-<p>
-世界で活躍できる人材発掘と育成を目的として、戦国大名を題材としたAI対戦型のゲームプログラミングコンテスト
-SamurAI Codingの決勝を開催します。
-情報処理学会の主催としては3回目となり、12月実施のオンライン予選には世界中から過去最多の130を超えるプログラム提出がありました。
-当日は、予選を勝ち抜いた16チームによる白熱した対戦を、チーム紹介や実況およびアルゴリズム・戦略解説を交えて鑑賞します。
-決勝は<a href="http://www.ipsj.or.jp/event/taikai/77/">情報処理学会 第77回全国大会</a>に併設されます。
-どなたでもご参加いただけます。ぜひご一緒に白熱の対戦を鑑賞しましょう！
-</p>
-
-<p>
-<strong>
-いよいよ本日15:20からWorld Finalの対戦が始まります。
-京都大学の会場には来られないという方、ニコニコ生放送<a href="http://ch.nicovideo.jp/ipsj/">【第2イベント会場：情報処理学会チャンネル】</a>
-にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
-</strong>
-</p>
-
-<p>
-場所: <a href="http://www.ipsj.or.jp/event/taikai/77/access.html">情報処理学会 第77回全国大会 第2イベント会場</a>
-（京都大学 百周年時計台記念館 2F 国際交流ホールⅡ,Ⅲ）<br>
-参加: 申込不要（全国大会の他セッションも聴講されたい場合は<a href="http://www.ipsj.or.jp/event/taikai/77/adv_reserve.html">参加申し込み</a>ください）<br>
-司会: 鷲崎弘宜（早稲田大学グローバルソフトウェアエンジニアリング研究所）<br>
-解説: 坂本一憲（国立情報学研究所 アーキテクチャ科学研究系）ほか実行委員会一同<br>
-日時: 3月18日（水） 15:20-18:35（決勝18:00-）<br>
-　14:50-15:20 受付<br>
-　15:20-15:50 委員長挨拶、イベントスポンサー挨拶、コンテストゲーム紹介<br>
-　15:50-17:50 トーナメント観戦、選手自己紹介<br>
-　18:00-18:25 決勝観戦、講評<br>
-　18:25-18:35 表彰式<br>
-　18:45-20:15 懇親会（カンフォーラにて招待制）
-</p>
-
-　　　　　　<h3>決勝プログラム提出方法</h3>
-      <p><a href='http://arena.ai-comp.net/contests/5' target='_blank'>オンライン対戦サーバー</a>にてプログラムを提出してください。
-      各チームがサーバに投稿したAIプログラムのうち、ActiveなAIプログラムのみが決勝に使用されます。
-      ActiveなAIプログラムは常に1つのみで、Submit an AIタブの最下部で確認できます。</p>
-
-      <h3>第1～第4試合</h3>
-
-      <p>決勝進出者の16チームから、トーナメント形式で最終試合進出者を決定します。トーナメントの組み合わせはランダムに決定します。 各試合とも1本先取とし、ゲームに勝利したチームを最終試合進出とします。</p>
-
-
-      <h3>最終試合</h3>
-
-      <p>3ゲーム行い、1ゲームごとに得られる下記の点数の合計が最も多いチームを優勝とします。</p>
-
-      <p>同順位のチームがいない場合は以下の点数を獲得します。<p>
-      <ul>
-        <li>1位： 18点
-        <li>2位： 4点
-        <li>3位： 2点
-        <li>4位： 0点
-      </ul>
-
-      <p>同順位のチームがいる場合は、以下のように点数を分け合います。</p>
-      <table border>
-        <thead>
-        <tr>
-          <th></th>
-          <th>1位</th>
-          <th>2位</th>
-          <th>3位</th>
-          <th>4位</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <td>1、2位がタイの場合</td>
-          <td>11点</td>
-          <td>11点</td>
-          <td>2点</td>
-          <td>0点</td>
-        </tr>
-        <tr>
-          <td>1、2、3位がタイの場合</td>
-          <td>8点</td>
-          <td>8点</td>
-          <td>8点</td>
-          <td>0点</td>
-        </tr>
-        <tr>
-          <td>1、2、3、4位がタイの場合</td>
-          <td>6点</td>
-          <td>6点</td>
-          <td>6点</td>
-          <td>6点</td>
-        </tr>
-        <tr>
-          <td>2、3位がタイの場合</td>
-          <td>18点</td>
-          <td>3点</td>
-          <td>3点</td>
-          <td>0点</td>
-        </tr>
-        <tr>
-          <td>2、3、4位がタイの場合</td>
-          <td>18点</td>
-          <td>2点</td>
-          <td>2点</td>
-          <td>2点</td>
-        </tr>
-        <tr>
-          <td>3、4位がタイの場合</td>
-          <td>18点</td>
-          <td>4点</td>
-          <td>1点</td>
-          <td>1点</td>
-        </tr>
-        <tr>
-          <td>1、2位がタイ、3、4位がタイの場合</td>
-          <td>11点</td>
-          <td>11点</td>
-          <td>1点</td>
-          <td>1点</td>
-        </tr>
-        </tbody>
-      </table>
+<p>(TBD)</p>
     </section>
 
 <footer>
@@ -393,51 +44,29 @@ SamurAI Codingの決勝を開催します。
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
-          samurai2014-contact@ipsj.or.jp</a></p>
-          <img src="images/IPSJ_logoB_M.gif" title="logo_ipsj" width="200"/>
+            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+          samurai2015-contact@ipsj.or.jp</a></p>
+          <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
-            <h3>イベントスポンサー</h3>
-            <p>株式会社リクルートホールディングス</p>
-            <p><a href="http://www.recruit.jp/"><img src="images/1_Brandlogo_Color.jpg" width="200"/></a></p>
-            <p>Indeed,Inc.</p>
-            <p><a href="http://jp.indeed.com/"><img src="images/indeed.png" width="200"/></a></p>
-            <h3>ゴールドスポンサー</h3>
-            <p>株式会社いい生活</p>
-            <p><a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
-            <p>株式会社日立製作所</p>
-            <p><a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a></p>
+            <h3>イベントスポンサー</h3>(TBD)
+            <h3>ゴールドスポンサー</h3>(TBD)
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
             <p class="smaller">
-              一般社団法人 情報サービス産業協会<br>
-              一般社団法人 電子情報技術産業協会<br>
-              一般社団法人 電子情報通信学会<br>
-              一般社団法人 人工知能学会<br>
-              一般社団法人 日本ソフトウェア科学会<br>
-              一般社団法人 日本情報システム・ユーザー協会<br>
               IEEE-Computer Society<br>
-              IEEE-Computer Society Japan Chapter<br>
-              IEEE Japan Office<br>
-              京都大学 情報学研究科<br>
-              京都大学 学術情報メディアセンター<br>
-              財団法人 情報科学国際交流財団<br>
-              The Korean Institute of Information Scientists and Engineers<br>
+              (TBD)
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
             <p class="smaller">
-              独立行政法人 情報処理推進機構<br>
-              経済産業省<br>
-              外務省<br>
-              文部科学省
+            	(TBD)
             </p>
           </section>
         </td>
